--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": { 
-  "build": "rm -rf dist && webpack", 
-  "dev": "webpack serve" 
-} ,
+  "scripts": {
+    "build": "rm -rf dist && webpack",
+    "dev": "webpack serve"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.7.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.8",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
