--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf dist && webpack",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +21,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.9.0",
     "cssnano": "^6.0.3",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "i": "^0.3.7",
     "mini-css-extract-plugin": "^2.7.7",
